--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@/*": ["src/*"],
       "@auth/*": ["src/auth/*"],
