--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -25,6 +25,7 @@
     "migration:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
     "@nestjs/apollo": "^12.0.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.0.0",
@@ -36,6 +37,7 @@
     "@nestjs/typeorm": "^9.0.0",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
