--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,54 @@
+version: '3.8'
+
 services:
   postgres:
     image: postgres:15-alpine
     container_name: dragon-postgres
+    restart: always
+    ports:
+      - '5432:5432'
     environment:
-      POSTGRES_DB: dragon_db
       POSTGRES_USER: dragon_user
       POSTGRES_PASSWORD: dragon_password
+      POSTGRES_DB: dragon_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dragon_user -d dragon_db"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      target: development
     container_name: dragon-backend
-    environment:
-      NODE_ENV: development
-      DATABASE_URL: postgresql://dragon_user:dragon_password@postgres:5432/dragon_db
-      JWT_SECRET: dragon-secret-key-change-in-production
-      JWT_EXPIRATION: 3600
-      GRAPHQL_PLAYGROUND: true
+    restart: always
     ports:
-      - "3001:3001"
+      - '3000:3000'
+    environment:
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_NAME: dragon_db
+      DATABASE_USER: dragon_user
+      DATABASE_PASSWORD: dragon_password
+      JWT_SECRET: super-secret-jwt-key-change-in-production-please
+      NODE_ENV: development
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     volumes:
-      - ./backend/src:/app/src
-    command: npm run start:dev
+      - ./backend:/app
+      - /app/node_modules
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: dragon-frontend
-    environment:
-      NEXT_PUBLIC_API_URL: http://localhost:3001/graphql
-      NODE_ENV: development
+    restart: always
     ports:
-      - "3000:3000"
+      - '3001:3000'
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
-    volumes:
-      - ./frontend/src:/app/src
-    command: npm run dev
 
 volumes:
   postgres_data:
