--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.0",
+    "@apollo/client": "^3.14.0",
     "@tanstack/react-query": "^4.32.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.12.0",
     "graphql-request": "^5.0.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.0",
-    "tailwindcss": "^3.3.0"
+    "react-hook-form": "^7.45.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -31,13 +30,14 @@
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.40.0",
     "eslint-config-next": "^14.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.5.6",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.19",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   }
